<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="321dp"
        android:layout_height="66dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Edit Title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="60dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="60dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/instructions"
        android:layout_width="364dp"
        android:layout_height="125dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Add Recipe instructions here..."
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ingListTitle"
        android:layout_width="159dp"
        android:layout_height="94dp"
        android:layout_marginTop="200dp"
        android:text="Your recipe ingredient list:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/photoURL"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="add image url here"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingRV"
        android:layout_width="185dp"
        android:layout_height="222dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ingListTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingSearch" />

    <SearchView
        android:id="@+id/ingSearch"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <!--    <EditText-->
    <!--        android:id="@+id/seachAllIngr"-->
    <!--        android:layout_width="207dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="128dp"-->
    <!--        android:layout_marginEnd="196dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="Search ingredients to add:"-->
    <!--        android:inputType="text"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>