...
            android:layout_height="wrap_content"
            android:text="Dev"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbModMode"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:text="Moderate"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

...
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnModeratePage"
        android:layout_width="154dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:text="Moderate"
        android:textSize="20sp"
        android:visibility="invisible"
...
