...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="35dp"
            android:text="Comment Section:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <ListView
            android:id="@+id/listOfComments"
            android:layout_width="412dp"
            android:layout_height="196dp"
            android:layout_marginTop="32dp"
...
