<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="567dp"
        android:text="Login:"
        android:textSize="18pt"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="98dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="405dp"
        android:ems="10"
        android:hint=" username (Bob)"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="277dp"
        android:layout_height="105dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="266dp"
        android:ems="10"
        android:hint="Password (123)"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="116dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:text="Submit"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="334dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="124dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="80dp"
        android:text="Cancel"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="334dp" />

    <Button
        android:id="@+id/regButton"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="200dp"
        android:insetLeft="10dp"
        android:insetTop="1dp"
        android:insetRight="10dp"
        android:insetBottom="1dp"
        android:text="Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16dp"
        app:rippleColor="#3F51B5" />

    <TextView
        android:id="@+id/RegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="212dp"
        android:text="Don't have an account? "
        android:textSize="16dp" />

</RelativeLayout>